k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zomato-app
  labels:
    name: zomato-app
    environment: production
