k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomato-flask-service
  labels:
    app: zomato-flask-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: zomato-flask-app
---
apiVersion: v1
kind: Service
metadata:
  name: zomato-flask-nodeport
  labels:
    app: zomato-flask-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: zomato-flask-app
